<resources>
    <string name="app_name">MediConvo</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="email_address">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="already_have_account">Already have Account? Login</string>
    <string name="make_inquiry">Make an Enquiry</string>
    <string name="report_condition">Report Condition</string>
    <string name="search_health_care">Access Health Care</string>
    <string name="access_resources">Access Medical Resources</string>
</resources>