<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/diseasesTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/make_inquiry"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/medicineTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_condition"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/hospitalsTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_health_care"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/bloodTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/access_resources"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>