<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.LoginActivity">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/app_name"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/signUpLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:hint="@string/phone"
        android:inputType="phone"
        android:maxLength="10"
        android:minHeight="48dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLength="10"
        android:minHeight="48dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColorHint="#757575" />

    <Button
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#2D5458"
        android:onClick="loginImplementation"
        android:text="@string/submit"
        android:textColor="#000000" />

</RelativeLayout>